--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     -   id: mixed-line-ending
         args: [--fix=lf]
 -   repo: https://github.com/ambv/black
-    rev: 21.7b0
+    rev: 22.3.0
     hooks:
     - id: black
 -   repo: https://github.com/pycqa/flake8
